# anthropx

./: CLAUDE.md  Cargo.toml  CheckList.md  DesignTree.json  Makefile  OMISSIONS-001.json  OMISSIONS-001.md  OMISSIONS-002.json  OMISSIONS-002.md  README.md  RFC-OMISSIONS-001.md  RFC-ROOT.md  RFC-X-001.md  Status.json  Tickets.json  config.example.toml
crates/llm-bridge-rust-v0.5.0/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  _typos.toml  cliff.toml  release.toml
crates/llm-bridge-rust-v0.5.0/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release.yml
crates/llm-bridge-rust-v0.5.0/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml
crates/llm-bridge-rust-v0.5.0/.github/workflows/: ci.yml  release.yml
crates/llm-bridge-rust-v0.5.0/crates/core/: Cargo.toml  README.md
crates/llm-bridge-rust-v0.5.0/crates/core/examples/: README.md  all_transforms.rs  basic_nonstream.rs  chat-roundtrip.rs  error_handling.rs  streaming_text.rs  streaming_tool_use.rs  validate-cli.rs
crates/llm-bridge-rust-v0.5.0/crates/core/src/: lib.rs  model.rs
crates/llm-bridge-rust-v0.5.0/crates/core/tests/: end_to_end_fixtures.rs
crates/llm-bridge-rust-v0.5.0/docs/: code-quality-report.md  codegraph-usage.md  documentation-audit-report.md  high-risk-task-guideline.md  index.md  performance-analysis-report.md  pre-commit-usage.md  prompt-template-library.md  protocol-conversion-analysis-2026-06-11.md  release-guide.md  search.md  security-audit-report.md  sparc-usage-guideline.md  tdd-guideline.md
crates/llm-bridge-rust-v0.5.0/docs/research/: README.md
crates/llm-bridge-rust-v0.5.0/docs/superpowers/plans/: 2026-06-25-protocol-transform-validation-plan.md  2026-06-26-protocol-transform-enhancements.md
crates/llm-bridge-rust-v0.5.0/docs/superpowers/specs/: 2026-06-25-protocol-transform-validation-design.md  2026-06-26-protocol-transform-enhancements-design.md
crates/llm-bridge-rust-v0.5.0/fixtures/protocol-transform/: README.md
crates/llm-bridge-rust-v0.5.0/fixtures/protocol-transform/anthropic-to-openai/: non-stream-basic.json  non-stream-response-thinking-tool-use.json  non-stream-responses-basic.json  non-stream-responses-response-thinking-tool-use.json  non-stream-tool-result.json  non-stream-tool-use.json  non-stream-top-level-tools.json  stream-responses-tool-use.json  stream-text.json  stream-tool-use.json
crates/llm-bridge-rust-v0.5.0/fixtures/protocol-transform/end-to-end/: anthropic-openai-non-stream-thinking-tool-use.json  anthropic-openai-stream-thinking-tool-use.json  openai-real-log-stream-final-answer.json
crates/llm-bridge-rust-v0.5.0/fixtures/protocol-transform/field-filter/: expected-stripped.json  input-with-dangerous-fields.json
crates/llm-bridge-rust-v0.5.0/fixtures/protocol-transform/openai-to-anthropic/: non-stream-response-thinking.json  (+4 more)
crates/llm-bridge-rust-v0.5.0/scripts/: http-proxy.sh  verify.sh
crates/llm-bridge-rust-v0.5.0/scripts/validate-protocol/: __init__.py  __main__.py  cli.py  comparators.py  fixtures.py  reporters.py  requirements.txt  runners.py  validators.py
crates/llm-bridge-rust-v0.5.0/specs/: 00-protocol-transform-prd.md  10-protocol-transform-design.md  11-lossy-downgrade-checklist.md  12-image-download-security.md  13-responses-previous-response-id-design.md  62-example-chat-roundtrip.md  63-http-proxy-example.md  90-protocol-transform-roadmap.md  91-protocol-transform-impl-plan.md  92-extend-usage-cache-reasoning-fields.md  93-compressor-crate.md  99-protocol-transform-key-decisions.md  index.md
(+97 files in other folders)
